--- a/webapp/views/work.html
+++ b/webapp/views/work.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
-    <link href="/stylesheets/style.css" rel="stylesheet">
+    <link href="/style/bootstrap.min.css" rel="stylesheet">
+    <link href="/style/style.css" rel="stylesheet">
+    <link href="/style/css/main.css" rel="stylesheet">
     <!--<link href="/stylesheets/base.css" rel="stylesheet">-->
     <!--<link href="/stylesheets/common.css" rel="stylesheet">-->
     <!--<link href="/stylesheets/page.css" rel="stylesheet">-->
